Removed equals()/hashCode() overrides from JsonValue subinterfaces